Made simple layout

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <title>pung</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="questions/Question1.html">Fråga 1</a>
-          <a href="questions/Question2.html">Fråga 2</a>
-          <a href="questions/Question3.html">Fråga 3</a>
-        </nav>
-      </div>
-    </header>
-    <p>texttest</p>
-    <p>blablabla</p>
+    <section id="page">
+  <div class="icon">Icon</div>
+  <nav>Navigation</nav>
+  <div class="welcome">welcome</div>
+  <div class="about1">about1</div>
+  <div class="about2">about2</div>
+  <div class="booking">Booking</div>
+  <div class="person1">Person1</div>
+  <div class="person2">Person2</div>
+  <div class="contact">Contact</div>
+  <footer>Footer</footer>
+</section>
   </body>
 </html>
