--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <body>
     <section id="page">
   <div class="icon">Icon</div>
-  <nav>Navigation</nav>
+  <nav>
+        <a href="test.html">Hem</a>
+        <a href="test.html">Om oss</a>
+        <a href="test.html">Konakt</a>
+  </nav>
   <div class="welcome">welcome</div>
   <div class="about1">about1</div>
   <div class="about2">about2</div>
