--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
   </head>
   <body>
     <section id="page">
-  <div class="icon">Icon</div>
+  <div class="icon"><img src="testicon.png" width="100px" height="100px"></div>
   <nav>
-        <a href="test.html">Hem</a>
-        <a href="test.html">Om oss</a>
-        <a href="test.html">Konakt</a>
+    <ul>
+        <li><a href="test.html">Hem</a></li>
+        <li><a href="test.html">Om oss</a></li>
+        <li><a href="test.html">Konakt</a></li>
+    </ul>
   </nav>
-  <div class="welcome">welcome</div>
+  <div class="welcome">
+    <h1>Välkommen till AC MEDIA - Din Partner för Tillväxt!</h1>
+    <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
+    <p>
+      Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
+Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknadsföringskampanjer som är anpassade till just ditt företag och eran marknadsföring. 
+
+    </p>
+
+
+  </div>
   <div class="about1">about1</div>
   <div class="about2">about2</div>
   <div class="booking">Booking</div>
