--- a/index.html
+++ b/index.html
@@ -6,32 +6,79 @@
   </head>
   <body>
     <section id="page">
-  <div class="icon"><img src="testicon.png" width="100px" height="100px"></div>
+  <div class="icon" id="scroll1"><img src="testicon.png" width="100px" height="100px"></div>
   <nav>
     <ul>
-        <li><a href="test.html">Hem</a></li>
-        <li><a href="test.html">Om oss</a></li>
-        <li><a href="test.html">Konakt</a></li>
+        <li><a href="#scroll1">Hem</a></li>
+        <li><a href="#scroll2">Om oss</a></li>
+        <li><a href="#scroll3">Konakt</a></li>
     </ul>
   </nav>
   <div class="welcome">
-    <h1>Välkommen till AC MEDIA - Din Partner för Tillväxt!</h1>
+    <h1>Välkommen till AC MEDIA </h1>
+    <h2>Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
       Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
 Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknadsföringskampanjer som är anpassade till just ditt företag och eran marknadsföring. 
-
     </p>
+    <button>BOKA ETT MÖTE</button>
+    
+
+  </div>
+  <div class = deerimg>
+    <img src="deer.png">
+  </div>
+    
+  <div class="about1">
+    <h2>Om AC MEDIA</h2>
+    <p>AC MEDIA är en marknadsföringsbyrå i Göteborg som hjälper företag att utveckla sin effektivitet inom marknadsföring. Med hjälp av vår expertis inom området hjälper vi er bära där det brister. Istället för att slösa tid och kapital på ineffektiva marknadsföringsmetoder erbjuder AC MEDIA er att fokusera på kärnverksamheten, medan vi tar oss an den digitala utmaningen att få er att synas. </p>
 
 
   </div>
-  <div class="about1">about1</div>
-  <div class="about2">about2</div>
-  <div class="booking">Booking</div>
-  <div class="person1">Person1</div>
-  <div class="person2">Person2</div>
-  <div class="contact">Contact</div>
-  <footer>Footer</footer>
+  <div class="aboutx" id="scroll2"><img src="apple.png"></div>
+  <div class="about2">
+    <h2>Hur vi gör det:</h2>
+    <p>Vi använder oss av den senaste tekniken och håller oss ständigt uppdaterade så att ni slipper det! Utöver betald annonsering håller vi på AC MEDIA oss ständigt uppdaterade om AI. Med hjälp av AI och dataanalys kan vi skapa en helhetsbild av varje företagets position på marknaden och pinpointa var just ditt företag bör lägga sina resurser för högst ROI. 
+</p>
+  </div>
+  <div class="abouty"><img src="bow.png" height="80%"></div>
+  <div class="booking1">
+    <h2>våra tjänster</h2>
+    <h2>konkurrenskraftig metodik i marknadsföringen</h2>
+    <p>Vi erbjuder en konkurrenskraftig metodik i marknadsföringen som följer med omvärldens digitalisering. Vi lever i en värld där din digitala förmåga avgör vilka företag som överlever och bygger långsiktiga konkurrensfördelar och vilka som får stå kvar på perrongen.<br><br> Kontakta oss för en gratis konsultation för att se vilka förbättringsstrategier vi kan arbeta fram för ditt företag!
+</p>
+
+  </div>
+  <div class="booking2"><img src="deer.png"></div>
+  <div class="person1">
+    <h2> CEO </h2>
+    <img src="userlogo.png" height="250px">
+  <p>namn, utbilnding, mail</p>
+  <button>LINKEDIN</button>
+  </div>
+  <div class="person2"><h2> COO </h2>
+    <img src="userlogo.png" height="250px">
+  <p>namn, utbilnding, mail</p>
+  <button>LINKEDIN</button></div>
+  <div class="contact" id="scroll3">
+    <form>
+      <h2>KONTAKTA OSS</h2><br>
+      <input type="text"><br>
+      <input type="text"><br>
+      <textarea rows="10" cols="50" placeholder="Enter your message here" value=""></textarea><br>
+      <input type="submit">
+    </form>
+  </div>
+  
+  <div class="footer1"><img src="Instagram.png" height="50px"></div>
+  <div class="footer2">
+    <p>+24153132321</p>
+    <p>kgmsaks@gmail.com</p>
+    <p>copyright 2022</p>
+
+
+  </div>
 </section>
   </body>
 </html>
