--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <section id="page">
-  <div class="icon" id="scroll1"><img src="testicon.png" width="100px" height="100px"></div>
+  <div class="icon" id="scroll1"><img src="iconback.png" width="500px" height="150px"></div>
   <nav>
     <ul>
         <li><a href="#scroll1">Hem</a></li>
         <li><a href="#scroll2">Om oss</a></li>
-        <li><a href="#scroll3">Konakt</a></li>
+        <li><a href="#scroll3">Kontakt</a></li>
     </ul>
   </nav>
   <div class="welcome">
@@ -22,7 +22,7 @@
       Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
 Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknadsföringskampanjer som är anpassade till just ditt företag och eran marknadsföring. 
     </p>
-    <button>BOKA ETT MÖTE</button>
+    <a href="#scroll3"><button id="bookBtn" ><p>Boka ett möte med oss idag!</p> </button></a>
     
 
   </div>
@@ -64,9 +64,9 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   <div class="contact" id="scroll3">
     <form>
       <h2>KONTAKTA OSS</h2><br>
-      <input type="text"><br>
-      <input type="text"><br>
-      <textarea rows="10" cols="50" placeholder="Enter your message here" value=""></textarea><br>
+      <input type="text" placeholder="För- och Efternamn"><br>
+      <input type="text" placeholder="E-mail"><br>
+      <textarea rows="10" cols="50" placeholder="Meddelande" value=""></textarea><br>
       <input type="submit">
     </form>
   </div>
