--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <div class="icon" id="scroll1"><img src="iconback.png" width="500px" height="150px"></div>
   <nav>
     <ul>
-        <li><a href="#scroll1">Hem</a></li>
-        <li><a href="#scroll2">Om oss</a></li>
+        <li><a href="#scroll1">Hem |</a></li>
+        <li><a href="#scroll2">Om oss |</a></li>
         <li><a href="#scroll3">Kontakt</a></li>
     </ul>
   </nav>
   <div class="welcome">
-    <h1>Välkommen till AC MEDIA </h1>
+    <h1>Välkommen till <span class="highlight1">AC </span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </h1>
     <h2>Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
       Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
 Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknadsföringskampanjer som är anpassade till just ditt företag och eran marknadsföring. 
     </p>
-    <a href="#scroll3"><button id="bookBtn" ><p>Boka ett möte med oss idag!</p> </button></a>
+    <a href=""><button id="bookBtn1">Boka ett möte</button></a>
     
 
   </div>
@@ -44,23 +44,25 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   </div>
   <div class="abouty"><img src="bow.png" height="80%"></div>
   <div class="booking1">
-    <h2>våra tjänster</h2>
+    <h3>Våra tjänster:</h3>
     <h2>konkurrenskraftig metodik i marknadsföringen</h2>
     <p>Vi erbjuder en konkurrenskraftig metodik i marknadsföringen som följer med omvärldens digitalisering. Vi lever i en värld där din digitala förmåga avgör vilka företag som överlever och bygger långsiktiga konkurrensfördelar och vilka som får stå kvar på perrongen.<br><br> Kontakta oss för en gratis konsultation för att se vilka förbättringsstrategier vi kan arbeta fram för ditt företag!
 </p>
+<a href=""><button id="bookBtn2">Boka ett möte med oss idag! </button></a>
 
   </div>
   <div class="booking2"><img src="deer.png"></div>
   <div class="person1">
     <h2> CEO </h2>
-    <img src="userlogo.png" height="250px">
-  <p>namn, utbilnding, mail</p>
-  <button>LINKEDIN</button>
+    <img src="CEO.png" height="250px">
+  <p>André Christerson, ekonomie kandidatexamen från Handelshögskolan. </p>
+  <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button>LINKEDIN</button></a></div>
   </div>
   <div class="person2"><h2> COO </h2>
-    <img src="userlogo.png" height="250px">
-  <p>namn, utbilnding, mail</p>
-  <button>LINKEDIN</button></div>
+    <img src="COO.png" height="250px">
+  <p>Joni Gashi, ekonomie kandidatexamen från Handelshögskolan.
+</p>
+  <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button>LINKEDIN</button></a></div>
   <div class="contact" id="scroll3">
     <form>
       <h2>KONTAKTA OSS</h2><br>
@@ -71,11 +73,12 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     </form>
   </div>
   
-  <div class="footer1"><img src="Instagram.png" height="50px"></div>
+  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="50px"></a></div>
   <div class="footer2">
-    <p>+24153132321</p>
-    <p>kgmsaks@gmail.com</p>
-    <p>copyright 2022</p>
+    <p>kontakta oss:</p>
+    <p>+46706795950</p>
+    <p>acmediasweden@gmail.com</p>
+    <p>copyright 2023</p>
 
 
   </div>
