--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
 Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknadsföringskampanjer som är anpassade till just ditt företag och eran marknadsföring. 
     </p>
-    <a href=""><button id="bookBtn1">Boka ett möte</button></a>
+    <a href="#scroll3"><button id="bookBtn1">Boka ett möte</button></a>
     
 
   </div>
@@ -45,24 +45,24 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   <div class="abouty"><img src="bow.png" height="80%"></div>
   <div class="booking1">
     <h3>Våra tjänster:</h3>
-    <h2>konkurrenskraftig metodik i marknadsföringen</h2>
+    <h2>Konkurrenskraftig metodik i marknadsföringen</h2>
     <p>Vi erbjuder en konkurrenskraftig metodik i marknadsföringen som följer med omvärldens digitalisering. Vi lever i en värld där din digitala förmåga avgör vilka företag som överlever och bygger långsiktiga konkurrensfördelar och vilka som får stå kvar på perrongen.<br><br> Kontakta oss för en gratis konsultation för att se vilka förbättringsstrategier vi kan arbeta fram för ditt företag!
 </p>
-<a href=""><button id="bookBtn2">Boka ett möte med oss idag! </button></a>
+<a href="#scroll3"><button id="bookBtn2">Boka ett möte med oss idag! </button></a>
 
   </div>
   <div class="booking2"><img src="deer.png"></div>
   <div class="person1">
-    <h2> CEO </h2>
+    <h2> VD </h2>
     <img src="CEO.png" height="250px">
   <p>André Christerson, ekonomie kandidatexamen från Handelshögskolan. </p>
-  <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button>LINKEDIN</button></a></div>
+  <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button>LINKEDIN</button></a></div>
   </div>
-  <div class="person2"><h2> COO </h2>
+  <div class="person2"><h2> VICE-VD </h2>
     <img src="COO.png" height="250px">
   <p>Joni Gashi, ekonomie kandidatexamen från Handelshögskolan.
 </p>
-  <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button>LINKEDIN</button></a></div>
+  <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button>LINKEDIN</button></a></div>
   <div class="contact" id="scroll3">
     <form>
       <h2>KONTAKTA OSS</h2><br>
@@ -75,7 +75,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   
   <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="50px"></a></div>
   <div class="footer2">
-    <p>kontakta oss:</p>
+    <p>Kontakta oss:</p>
     <p>+46706795950</p>
     <p>acmediasweden@gmail.com</p>
     <p>copyright 2023</p>
