--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="sv">
   <head>
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" media="screen and (min-width:600px)" type="text/css" href="style.css" />
+    <link rel="stylesheet" media="screen and (max-width:599px)" type="text/css" href="phonestyle.css" />
   </head>
   <body>
     <section id="page">
-  <div class="icon" id="scroll1"><img src="iconback.png" width="500px" height="150px"></div>
+  <div class="icon" id="scroll1"><img id="iconid"src="iconback.png"></div>
   <nav>
     <ul>
         <li><a href="#scroll1">Hem |</a></li>
