--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   </div>
     
   <div class="about1">
-    <h2>TESTOm AC MEDIA</h2>
+    <h2>Om AC MEDIA</h2>
     <p>AC MEDIA är en marknadsföringsbyrå i Göteborg som hjälper företag att utveckla sin effektivitet inom marknadsföring. Med hjälp av vår expertis inom området hjälper vi er bära där det brister. Istället för att slösa tid och kapital på ineffektiva marknadsföringsmetoder erbjuder AC MEDIA er att fokusera på kärnverksamheten, medan vi tar oss an den digitala utmaningen att få er att synas. </p>
 
 
