fixed all images

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   </div>
     
   <div class="about1">
-    <h2>Om AC MEDIA</h2>
+    <h2 style="color:#07549A;">Om AC MEDIA</h2>
     <p>AC MEDIA är en marknadsföringsbyrå i Göteborg som hjälper företag att utveckla sin effektivitet inom marknadsföring. Med hjälp av vår expertis inom området hjälper vi er bära där det brister. Istället för att slösa tid och kapital på ineffektiva marknadsföringsmetoder erbjuder AC MEDIA er att fokusera på kärnverksamheten, medan vi tar oss an den digitala utmaningen att få er att synas. </p>
 
 
   </div>
   <div class="aboutx" id="scroll2"><img src="apple.png"></div>
   <div class="about2">
-    <h2>Hur vi gör det:</h2>
+    <h2 style="color:#07549A;">Hur vi gör det:</h2>
     <p>Vi använder oss av den senaste tekniken och håller oss ständigt uppdaterade så att ni slipper det! Utöver betald annonsering håller vi på AC MEDIA oss ständigt uppdaterade om AI. Med hjälp av AI och dataanalys kan vi skapa en helhetsbild av varje företagets position på marknaden och pinpointa var just ditt företag bör lägga sina resurser för högst ROI. 
 </p>
   </div>
@@ -66,7 +66,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
   <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button>LINKEDIN</button></a></div>
   <div class="contact" id="scroll3">
     <form>
-      <h2>KONTAKTA OSS</h2><br>
+      <h2 style="color:#07549A;">KONTAKTA OSS</h2><br>
       <input type="text" placeholder="För- och Efternamn"><br>
       <input type="text" placeholder="E-mail"><br>
       <textarea rows="10" cols="50" placeholder="Meddelande" value=""></textarea><br>
