--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     </ul>
   </nav>
   <div class="welcome">
-    <h1>Välkommen till <span class="highlight1">AC </span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </h1>
+    <h1>Välkommen till </h1>
+    <h1><div class="brush"><span class="highlight1">AC </span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
     <h2>Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
       Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
 Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknadsföringskampanjer som är anpassade till just ditt företag och eran marknadsföring. 
     </p>
-    <a href="#scroll3"><button id="bookBtn1">Boka ett möte</button></a>
+    <a href="#scroll3"><button id="bookBtn1" style="color:#07549A;">Boka ett möte</button></a>
     
 
   </div>
@@ -49,17 +50,17 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     <h2>Konkurrenskraftig metodik i marknadsföringen</h2>
     <p>Vi erbjuder en konkurrenskraftig metodik i marknadsföringen som följer med omvärldens digitalisering. Vi lever i en värld där din digitala förmåga avgör vilka företag som överlever och bygger långsiktiga konkurrensfördelar och vilka som får stå kvar på perrongen.<br><br> Kontakta oss för en gratis konsultation för att se vilka förbättringsstrategier vi kan arbeta fram för ditt företag!
 </p>
-<a href="#scroll3"><button id="bookBtn2">Boka ett möte med oss idag! </button></a>
+<a href="#scroll3"><button id="bookBtn2" style="color:#07549A;">Boka ett möte med oss idag! </button></a>
 
   </div>
   <div class="booking2"><img src="deer.png"></div>
   <div class="person1">
-    <h2> VD </h2>
+    <h2 style="color:#07549A;"> VD </h2>
     <img src="CEO.png" height="250px">
   <p>André Christerson, ekonomie kandidatexamen från Handelshögskolan. </p>
   <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button>LINKEDIN</button></a></div>
   </div>
-  <div class="person2"><h2> VICE-VD </h2>
+  <div class="person2"><h2 style="color:#07549A;"> VICE-VD </h2>
     <img src="COO.png" height="250px">
   <p>Joni Gashi, ekonomie kandidatexamen från Handelshögskolan.
 </p>
@@ -74,7 +75,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     </form>
   </div>
   
-  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="50px"></a></div>
+  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="100px"></a></div>
   <div class="footer2">
     <p>Kontakta oss:</p>
     <p>+46706795950</p>
