--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     <p>Vi använder oss av den senaste tekniken och håller oss ständigt uppdaterade så att ni slipper det! Utöver betald annonsering håller vi på AC MEDIA oss ständigt uppdaterade om AI. Med hjälp av AI och dataanalys kan vi skapa en helhetsbild av varje företagets position på marknaden och pinpointa var just ditt företag bör lägga sina resurser för högst ROI. 
 </p>
   </div>
-  <div class="abouty"><img src="bow.png" height="80%"></div>
+  <div class="abouty"><img height="80%"></div>
   <div class="booking1">
     <h3>Våra tjänster:</h3>
     <h2>Konkurrenskraftig metodik i marknadsföringen</h2>
