--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Home</title>
     <link rel="stylesheet" media="screen and (min-width:1001px)" type="text/css" href="style.css" />
     <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap');
+</style>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Spectral:ital@1&display=swap');
+</style>
   </head>
   <body>
     <section id="page">
