--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Home</title>
     <link rel="stylesheet" media="screen and (min-width:1001px)" type="text/css" href="style.css" />
     <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
+    <link rel="icon" href="Logo.jpg">
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap');
 </style>
