--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
     <link rel="icon" href="Logo.jpg">
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 </style>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Spectral:ital@1&display=swap');
