--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     <h2 style="color:#07549A;"> VD </h2>
     <img src="CEO.png" height="250px">
   <p>André Christerson, ekonomie kandidatexamen från Handelshögskolan. </p>
-  <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button>LINKEDIN</button></a></div>
+  <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button style="font-family: 'Permanent Marker', cursive;">LINKEDIN</button></a></div>
   </div>
   <div class="person2"><h2 style="color:#07549A;"> VICE-VD </h2>
     <img src="COO.png" height="250px">
   <p>Joni Gashi, ekonomie kandidatexamen från Handelshögskolan.
 </p>
-  <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button>LINKEDIN</button></a></div>
+  <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button style="font-family: 'Permanent Marker', cursive;">LINKEDIN</button></a></div>
   <div class="contact" id="scroll3">
     <form action="serverScript.php" method="post">
       <h2 style="color:#07549A;">KONTAKTA OSS</h2><br>
