--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
       <input type="text" name="fullname" placeholder="För- och Efternamn" required><br>
       <input type="text" name="E-mail"placeholder="E-mail" required><br>
       <textarea rows="10" cols="50" name="message" placeholder="Meddelande" value="" required></textarea><br>
-      <input type="submit">
+      <input type="submit" style="font-family: 'Permanent Marker', cursive;">
     </form>
   </div>
   
