--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="welcome">
     <h1>Välkommen till </h1>
     <h1><div class="brush"><span class="highlight1">AC </span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
-    <h2>Din Partner för Tillväxt!</h2>
+    <h2 style="color:#46C5F8;">Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
       Vi är en marknadsföringsbyrå i Göteborg som hjälper företagare att producera bättre ROI via betald annonsering och SEO. 
