--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Spectral:ital@1&display=swap');
 </style>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap');
+</style>
   </head>
   <body>
     <section id="page">
@@ -26,7 +29,7 @@
   </nav>
   <div class="welcome">
     <h1>Välkommen till </h1>
-    <h1><div class="brush"><span class="highlight1">AC </span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
+    <h1><div class="brush"><span class="highlight1" style="padding-right: 20px;">AC</span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
     <h2 style="color:#46C5F8;">Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
