--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Spectral:ital@1&display=swap');
 </style>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap');
 </style>
   </head>
   <body>
