--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="sv">
   <head>
     <title>Home</title>
-    <link rel="stylesheet" media="screen and (min-width:1001px)" type="text/css" href="style.css" />
-    <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
+    <link rel="stylesheet" media="screen and (min-width:1601px)" type="text/css" href="https://ac-media.net/style.css" />
+    <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1001px)" type="text/css" href="https://ac-media.net/smallstyle.css" />
+    <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="https://ac-media.net/phonestyle.css" />
+
     <link rel="icon" href="Logo.jpg">
     <style>
   @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 </style>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Spectral:ital@1&display=swap');
+</style>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap');
 </style>
   </head>
   <body>
@@ -24,7 +29,7 @@
   </nav>
   <div class="welcome">
     <h1>Välkommen till </h1>
-    <h1><div class="brush"><span class="highlight1">AC </span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
+    <h1><div class="brush"><span class="highlight1" style="padding-right: 20px;">AC</span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
     <h2 style="color:#46C5F8;">Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
@@ -45,7 +50,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
 
 
   </div>
-  <div class="aboutx" id="scroll2"><img src="apple.png"></div>
+  <div class="aboutx" id="scroll2"><img></div>
   <div class="about2">
     <h2 style="color:#07549A;">Hur vi gör det:</h2>
     <p>Vi använder oss av den senaste tekniken och håller oss ständigt uppdaterade så att ni slipper det! Utöver betald annonsering håller vi på AC MEDIA oss ständigt uppdaterade om AI. Med hjälp av AI och dataanalys kan vi skapa en helhetsbild av varje företagets position på marknaden och pinpointa var just ditt företag bör lägga sina resurser för högst ROI. 
