--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="sv">
   <head>
     <title>Home</title>
-    <link rel="stylesheet" media="screen and (min-width:1601px)" type="text/css" href="https://ac-media.net/style.css" />
-    <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1001px)" type="text/css" href="https://ac-media.net/smallstyle.css" />
-    <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="https://ac-media.net/phonestyle.css" />
+    <link rel="stylesheet" media="screen and (min-width:1601px)" type="text/css" href="style.css" />
+    <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1001px)" type="text/css" href="smallstyle.css" />
+    <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
 
-    <link rel="icon" href="/Logo.jpg">
+    <link rel="icon" href="Logo.jpg">
     <style>
   @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 </style>
@@ -19,7 +19,7 @@
   </head>
   <body>
     <section id="page">
-  <div class="icon" id="scroll1"><img id="iconid"src="/iconback.png"></div>
+  <div class="icon" id="scroll1"><img id="iconid"src="iconback.png"></div>
   <nav>
     <ul>
         <li><a href="#scroll1">Hem |</a></li>
@@ -41,7 +41,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
 
   </div>
   <div class = deerimg>
-    <img src="/deer.png">
+    <img src="deer.png">
   </div>
     
   <div class="about1">
@@ -65,20 +65,20 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
 <a href="#scroll3"><button id="bookBtn2" style="color:#07549A;">Boka ett möte med oss idag! </button></a>
 
   </div>
-  <div class="booking2"><img src="/deer.png"></div>
+  <div class="booking2"><img src="deer.png"></div>
   <div class="person1">
     <h2 style="color:#07549A;"> VD </h2>
-    <img src="/CEO.png" height="250px">
+    <img src="CEO.png" height="250px">
   <p>André Christerson, ekonomie kandidatexamen från Handelshögskolan. </p>
   <a href="https://www.linkedin.com/in/andr%C3%A9-christerson-b06b18235/"><button style="font-family: 'Permanent Marker', cursive;">LINKEDIN</button></a></div>
   </div>
   <div class="person2"><h2 style="color:#07549A;"> VICE-VD </h2>
-    <img src="/COO.png" height="250px">
+    <img src="COO.png" height="250px">
   <p>Joni Gashi, ekonomie kandidatexamen från Handelshögskolan.
 </p>
   <a href="https://www.linkedin.com/in/joni-gashi-a66786224/"><button style="font-family: 'Permanent Marker', cursive;">LINKEDIN</button></a></div>
   <div class="contact" id="scroll3">
-    <form>
+    <form action="serverScript.php" method="post">
       <h2 style="color:#07549A;">KONTAKTA OSS</h2><br>
       <input type="text" name="fullname" placeholder="För- och Efternamn" required><br>
       <input type="text" name="E-mail"placeholder="E-mail" required><br>
@@ -87,7 +87,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     </form>
   </div>
   
-  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="/Instagram.png" height="100px"></a></div>
+  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="100px"></a></div>
   <div class="footer2">
     <p>Kontakta oss:</p>
     <p>+46706795950</p>
