--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>Home</title>
     <link rel="stylesheet" media="screen and (min-width:1601px)" type="text/css" href="style.css" />
-    <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1001px)" type="text/css" href="smallstyle.css" />
+    <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1201px)" type="text/css" href="smallstyle.css" />
+    <link rel="stylesheet" media="screen and (max-width:1400px) and (min-width:1001px)" type="text/css" href="jonistyle.css" />
     <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
+    
 
     <link rel="icon" href="Logo.jpg">
     <style>
