--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Home</title>
     <link rel="stylesheet" media="screen and (min-width:1601px)" type="text/css" href="style.css" />
     <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1201px)" type="text/css" href="smallstyle.css" />
-    <link rel="stylesheet" media="screen and (max-width:1400px) and (min-width:1001px)" type="text/css" href="jonistyle.css" />
+    <link rel="stylesheet" media="screen and (max-width:1400px) and (min-width:1281px)" type="text/css" href="jonistyle.css" />
+    <link rel="stylesheet" media="screen and (max-width:1280px) and (min-width:1001px)" type="text/css" href="jonistyle2.css" />
     <link rel="stylesheet" media="screen and (max-width:1000px)" type="text/css" href="phonestyle.css" />
     
 
@@ -67,7 +68,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
 <a href="#scroll3"><button id="bookBtn2" style="color:#07549A;">Boka ett möte med oss idag! </button></a>
 
   </div>
-  <div class="booking2"><img src="deer.png"></div>
+  <div class="booking2" ><img src="deer.png"></div>
   <div class="person1">
     <h2 style="color:#07549A;"> VD </h2>
     <img src="CEO.png" height="250px">
