--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
+    <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" media="screen and (min-width:1601px)" type="text/css" href="style.css" />
     <link rel="stylesheet" media="screen and (max-width:1600px) and (min-width:1201px)" type="text/css" href="smallstyle.css" />
