--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     </form>
   </div>
   
-  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="100px"></a><a href="https://se.trustpilot.com/review/ac-media.net"><img src="trustpilot.jpg" height="70px"></a></div>
+  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="100px"></a><a href="https://se.trustpilot.com/review/ac-media.net"><img src="trustpilot.png" height="70px"></a></div>
   <div class="footer2">
     <p>Kontakta oss:</p>
     <p>+46706795950</p>
