--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <section id="page">
-  <div class="icon" id="scroll1"><img id="iconid"src="iconback.png"></div>
+  
   <nav>
     <ul>
         <li><a href="#scroll1">Hem |</a></li>
@@ -33,7 +33,9 @@
   </nav>
   <div class="welcome">
     <h1>Välkommen till </h1>
-    <h1><div class="brush"><span class="highlight1" style="padding-right: 20px;">AC</span><span class="highlight2">M</span><span class="highlight1">EDIA</span> </div></h1>
+    
+    <h1><div class=""><img src="iconback.png" id="phonelogo"><!--<span class="highlight1" style="padding-right: 20px;">AC</span><span class="highlight2">M</span><span class="highlight1">EDIA</span> --></div></h1>
+    
     <h2 style="color:#46C5F8;">Din Partner för Tillväxt!</h2>
     <h3>Vi hjälper företag växa marknadsmässigt, digitalt och finansiellt.</h3>
     <p>
@@ -85,13 +87,13 @@ Vi gör en grundlig analys av företagets behov, skräddarsyr därefter marknads
     <form action="serverScript.php" method="post">
       <h2 style="color:#07549A;">KONTAKTA OSS</h2><br>
       <input type="text" name="fullname" placeholder="För- och Efternamn" required><br>
-      <input type="text" name="E-mail"placeholder="E-mail" required><br>
+      <input type="text" name="email"placeholder="E-mail" required><br>
       <textarea rows="10" cols="50" name="message" placeholder="Meddelande" value="" required></textarea><br>
       <input type="submit" style="font-family: 'Permanent Marker', cursive;">
     </form>
   </div>
   
-  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="100px"></a><a href="https://se.trustpilot.com/review/ac-media.net"><img src="trustpilot.png" height="70px"></a></div>
+  <div class="footer1"><a href="https://www.instagram.com/acmediasweden/"><img src="Instagram.png" height="100px"></a><a href="https://se.trustpilot.com/review/ac-media.net"><img src="trustpilot.png" id= "trustlogo"height="70px"></a></div>
   <div class="footer2">
     <p>Kontakta oss:</p>
     <p>+46706795950</p>
